tests/conformance/reject/0020-any-type.ts
// Subset-rejected example: explicit `any` type (TH0020).
// @thales-expect-error TH0020
function identity(x: any): any {
  return x;
}
console.log(identity(42));
